--- a/11-Filters.Rmd
+++ b/11-Filters.Rmd
@@ -1,18 +1,14 @@
 # Filters
 
-This chapter provides an overview of Vibe's Graphical User Interface (GUI).
+
 
 **The following is covered in this chapter:**
--  4.1. Introduction
--  4.2. {VIBE} Menu
--  4.3. Layouts
--  4.4. Smart Screen
--  4.5. Toolbars
--  4.6. Live Display
--  4.7. Live Parameter Display
--  4.7.1. Parameter Mode
--  4.7.2. Bank Mode
--  4.7.3. Fixture Mode
+
+- 11.1. On the Fly Filters
+- 11.2. General Filters Tab
+- 11.3 Library Defaults Tab
 
 
-## Introduction
+## On the Fly Filters
+## General Filters Tab
+## Library Defaults Tab
