--- a/14-Playing-Back-Cues-and-Scenes.Rmd
+++ b/14-Playing-Back-Cues-and-Scenes.Rmd
@@ -3,16 +3,27 @@
 This chapter provides an overview of Vibe's Graphical User Interface (GUI).
 
 **The following is covered in this chapter:**
--  4.1. Introduction
--  4.2. {VIBE} Menu
--  4.3. Layouts
--  4.4. Smart Screen
--  4.5. Toolbars
--  4.6. Live Display
--  4.7. Live Parameter Display
--  4.7.1. Parameter Mode
--  4.7.2. Bank Mode
--  4.7.3. Fixture Mode
+- 14.1. Controller Priority Logic
+- 14.2. Controller Overview
+- 14.3. Master Controller
+- 14.4. GOTO and LOAD
+- 14.5. Configuring Controllers
+- 14.6. Controller Color Codes
+- 14.7. Working With controllers
+- 14.8. Controller Release and Free
+- 14.9. Controller Qlist Properties
+- 14.10. Controller Modes
+- 14.11. Rate and Teach Keys
 
 
-## Introduction
+## Controller Priority Logic
+## Controller Overview
+## Master Controller
+## GOTO and LOAD
+## Configuring Controllers
+## Controller Color Codes
+## Working With controllers
+## Controller Release and Free
+## Controller Qlist Properties
+## Controller Modes
+## Rate and Teach Keys
