--- a/15-Dark-Parameter-Positioning.Rmd
+++ b/15-Dark-Parameter-Positioning.Rmd
@@ -3,16 +3,11 @@
 This chapter provides an overview of Vibe's Graphical User Interface (GUI).
 
 **The following is covered in this chapter:**
--  4.1. Introduction
--  4.2. {VIBE} Menu
--  4.3. Layouts
--  4.4. Smart Screen
--  4.5. Toolbars
--  4.6. Live Display
--  4.7. Live Parameter Display
--  4.7.1. Parameter Mode
--  4.7.2. Bank Mode
--  4.7.3. Fixture Mode
+- 15.1. Look Ahead (Move in Dark)
+- 15.2. Look Ahead Cue (Mark)
+- 15.3. Force Black
 
 
-## Introduction
+## Look Ahead (Move in Dark)
+## Look Ahead Cue (Mark)
+## Force Black
