--- a/17-Snaps.Rmd
+++ b/17-Snaps.Rmd
@@ -1,18 +1,12 @@
 # Snaps (Snapshots)
 
-This chapter provides an overview of Vibe's Graphical User Interface (GUI).
 
 **The following is covered in this chapter:**
--  4.1. Introduction
--  4.2. {VIBE} Menu
--  4.3. Layouts
--  4.4. Smart Screen
--  4.5. Toolbars
--  4.6. Live Display
--  4.7. Live Parameter Display
--  4.7.1. Parameter Mode
--  4.7.2. Bank Mode
--  4.7.3. Fixture Mode
+- 17.1. Storing Snaps
+- 17.2. Triggering Snap
+- 17.3. Attaching Snaps
 
 
-## Introduction
+## Storing Snaps
+## Triggering Snap
+## Attaching Snaps
