--- a/20-XYZ-Fixture-Calibration.Rmd
+++ b/20-XYZ-Fixture-Calibration.Rmd
@@ -1,18 +1,10 @@
 # XYZ Fixture Calibration
 
-This chapter provides an overview of Vibe's Graphical User Interface (GUI).
 
 **The following is covered in this chapter:**
--  4.1. Introduction
--  4.2. {VIBE} Menu
--  4.3. Layouts
--  4.4. Smart Screen
--  4.5. Toolbars
--  4.6. Live Display
--  4.7. Live Parameter Display
--  4.7.1. Parameter Mode
--  4.7.2. Bank Mode
--  4.7.3. Fixture Mode
+- 20.1. Calibration in WYSIWYG
+- 20.2. Calibration in Capture
 
 
-## Introduction
+## Calibration in WYSIWYG
+## Calibration in Capture
